# merx_v2

./: .env  .env.production.example  .env.railway.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.railway  FREE-TIER-DEPLOY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Procfile  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  analyze_logs.py  deploy-free-tier.ps1  deploy-free-tier.sh  docker-compose.yml  erp_ecosystem.md  luz_de_luna_products_seed.csv  nginx.conf  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt
.claude/: CLAUDE.md  REQUIREMENTS.md  TEAM.md  mcp.json  settings.json  settings.local.json  ux-REQUIREMENTS.md  ux-TEAM.md  ux.json
.claude/agents/: backend-engineer.md  devops-engineer.md  frontend-engineer.md  security-engineer.md  ux-backend-engineer.md  ux-frontend-engineer.md  vercel-deployment-specialist.md
.claude/commands/: api-endpoints.md  audit_report.md  auth.md  crm-roadmap.md  database.md  deployment.md  evolution_plan.md  implementation-gui-date.md  lint.md  plan_estrategico_contabilidad.md  responsive-implementation.md  tenant-implementation.md  test.md  testing.md
.claude/ecosystem/: 00_MASTER_BLUEPRINT.md  01_PHILOSOPHY_AND_CULTURE.md  02_GOVERNANCE_AND_DECISIONS.md  03_COMMUNICATION_MODEL.md  04_STRATEGIC_OBJECTIVES.md  05_ACCOUNTABILITY_SYSTEM.md  06_CONFLICT_RESOLUTION.md  07_CONTINUOUS_IMPROVEMENT.md  08_SCALABILITY_ROADMAP.md  09_CHANGE_POLICY.md  ROUTER.md
.claude/rules/: project.md
.github/: dependabot.yml
.github/workflows/: ai-review.yml  backend-warmup.yml  ci.yml  container-security.yml  dast.yml  deploy-frontend.yml  deploy-landing.yml  sast.yml  sca.yml  secret-scan.yml
.gsd/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md
.kilocode/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.kilocode/codebase/: STACK.md  TESTING.md
.kilocode/research/: ARCHITECTURE.md  PITFALLS.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/deployments/: 2026-02-17-backend-railway.md  2026-02-17-frontend-vercel.md
.planning/procedures/: PRODUCTION_TENANT_SETUP.md
.planning/research/: FEATURES.md  STACK.md  SUMMARY.md
.security/: zap-rules.tsv
.security/scripts/: ai-pr-review.py  zap-scan.sh
.semgrep/rules/: fastapi-auth.yml  fastapi-tenant.yml  secrets.yml
Chandelier/: 1.0.3.md  1.0.4.md  1.0.x.md  5-03-26.md  6-03-26.md  PROPUESTA DE VALOR.md
Chandelier/.obsidian/: workspace.json
alembic/: env.py
alembic/versions/: 13a81d111ca1_add_venta_envios_table.py  23fa462778a8_p0_contabilidad_fundamentos.py  27e3081a2522_add_url_pdf_to_ventas_and_cotizaciones.py  30bd1c39837f_add_cobro_cartera_to_tipo_asiento_check.py  470bb2b033d8_add_audit_columns_to_movimientos_.py  4c95adbde585_add_apertura_to_tipo_asiento.py  5600c67af29d_initial.py  5694eec66f4b_add_imagen_s3_key_to_productos.py  5937bd34a1a8_add_descuento_global_to_ventas_compras_.py  835b979b6465_detalles_asiento_audit_mixin.py  a1b2c3d4e5f6_add_mantenimiento_estado_to_tenants.py  a1b2c3d4e5f6_recetas_partial_unique_index.py  a1b2c3d4e5f6_socia_pricing_module.py  a791fb678a02_fix_audit_columns_add_missing_only.py  b0955cb14c15_add_crm_fields_to_terceros.py  b1c2d3e4f5a6_phase4_dian_fields.py  b2c3d4e5f6a7_add_porcentaje_merma_merge_heads.py  b4c55005691b_add_crm_tables.py  c5d6e7f8a9b0_socia_pricing_module.py  c7eb4b5e1ff2_fase1_seguridad_audit_logs_ultimo_acceso.py  cbb160c37bbc_add_tickets_pqrs.py  d1e2f3a4b5c6_producto_equivalencias_costo_historico.py  d4e5f6a7b8c9_fix_free_trial_max_productos.py  de736ea93ccf_add_costo_unitario_to_ventas_detalle.py  (+6 more)
backend/: comandos.txt
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
landing/: .env.example  package-lock.json  package.json
my-video/: package-lock.json  package.json
(+367 files in other folders)
