[project]
name = "merx-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
    "alembic>=1.14.0",
    "uvicorn>=0.40.0",
    "fastapi-cors>=0.0.6",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.27.0",
    "reportlab>=4.0",
    "boto3>=1.34",
    "slowapi>=0.1.9",
]
