[project]
name = "merx-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "sqlalchemy>=2.0.46",
    "alembic>=1.14.0",
    "uvicorn>=0.40.0",
    "fastapi-cors>=0.0.6",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.27.0",
    "reportlab>=4.0",
    "boto3>=1.34",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=1.40.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "svix>=1.14.0",
    "cryptography>=42.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff>=0.1.0",
    "safety>=3.0.0",
    "semgrep>=1.70.0",
    "bandit[toml]>=1.8.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests/security"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806"]

[tool.bandit]
exclude_dirs = ["backend/tests", "tests", "alembic"]
skips = [
    "B101",   # assert_used — acceptable in tests
    "B311",   # random — used for non-security purposes
]
tests = [
    "B102", "B103", "B104", "B105", "B106", "B107",  # Hardcoded credentials
    "B201", "B202",                                    # Flask debug (won't apply, but safe to include)
    "B301", "B302", "B303", "B304", "B305", "B306",  # Deserialization
    "B401", "B402", "B403", "B404", "B405", "B406",  # Import issues
    "B501", "B502", "B503", "B504", "B505", "B506",  # SSL/TLS
    "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609",  # Shell injection
    "B701", "B702",                                    # Jinja2
]
